--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
         "babel-loader": "^8.2.3",
         "bootstrap": "^4.6.0",
         "jquery": "^3.6",
+        "laravel-echo": "^1.11.3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "popper.js": "^1.16.1",
         "postcss": "^8.3.11",
         "postcss-import": "^12.0.1",
+        "pusher-js": "^7.0.3",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
