--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
         "vue": "^2.6.12",
         "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "vue-chat-scroll": "^1.4.0",
+        "vue-router": "^3.5.3"
     }
 }
