--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     },
     "dependencies": {
         "vue-chat-scroll": "^1.4.0",
-        "vue-router": "^3.5.3"
+        "vue-router": "^3.5.3",
+        "vuex": "^3.6.2"
     }
 }
