--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "sweetalert2": "^11.3.0",
         "vue-chat-scroll": "^1.4.0",
         "vue-router": "^3.5.3",
+        "vue-sweetalert2": "^5.0.2",
         "vuex": "^3.6.2"
     }
 }
